Fixes to table block and align classes.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -12,42 +12,47 @@
 	width: 100%;
 }
 
-@include media( tablet ) {
-	.alignwide {
-		position: relative;
-		width: $x-space-column-12;
-		transform: translateX( -50% );
-		max-width: calc( 100vw - 2 * 1em );
-		margin-top: 1em;
-		margin-bottom: 1em;
-		left: 50%;
+.entry-content {
+	
+	@include media( tablet ) {
+		.alignwide {
+			position: relative;
+			width: $x-space-column-12;
+			transform: translateX( -50% );
+			max-width: calc( 100vw - 2 * 1em );
+			margin-top: 1em;
+			margin-bottom: 1em;
+			left: 50%;
+		}
+
+		.alignfull {
+			position: relative;
+			transform: translateX( -50% );
+			width: 100vw;
+			max-width: 100vw;
+			margin-top: 1em;
+			margin-bottom: 1em;
+			left: 50%;
+		}
 	}
 
-	.alignfull {
-		position: relative;
-		transform: translateX( -50% );
-		width: 100vw;
-		max-width: 100vw;
-		margin-top: 1em;
-		margin-bottom: 1em;
-		left: 50%;
+	.aligncenter {
+		margin: 1em auto;
+		width: 100%;
 	}
-}
 
-.aligncenter {
-	margin: 1em auto;
-}
+	.alignleft {
+		float: left;
+		margin-right: $x-space-xs !important;
+		margin-bottom: $x-space-xs;;
+	}
 
-.alignleft {
-	float: left;
-	margin-right: $x-space-xs !important;
-	margin-bottom: $x-space-xs;;
-}
-
-.alignright {
-	float: right;
-	margin-left: $x-space-xs !important;
-	margin-bottom: $x-space-xs;
+	.alignright {
+		float: right;
+		margin-left: $x-space-xs !important;
+		margin-bottom: $x-space-xs;
+	}
+	
 }
 
 
@@ -332,10 +337,10 @@ ol.wp-block-latest-comments {
 table.wp-block-table {
 
 	border-collapse: collapse;
-	max-width: calc( 100% - ( $x-space-sm * 2 ) );
+//	max-width: calc( 100% - ( $x-space-sm * 2 ) );
 
 	@include media( tablet ) {
-		max-width: $x-grid-column-7;
+//		max-width: $x-grid-column-7;
 	}
 }
 
