--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -6,6 +6,8 @@
 .entry-summary,
 .page-content {
 	
+	@include clearfix;
+	
 	@include media( tablet ) {
 		width: $x-grid-column-7;
 	}
